# ApiNyaEr

./: .readthedocs.yaml  .readthedocs.yml  README.md  app.py  index.html  lumache.py  msg.txt  pyproject.toml  requirements.txt  script.py  setup.py  vercel.json
.github/: dependabot.yml
.github/workflows/: Pylint.yml  api_check.yml  lint.yml  log.yml  publish.yml  python-publish.yml  static.yml  tag-release.yml
ApiNyaEr/: __init__.py  _req.py  apinya.py  fungsi.py  message.txt  ress.py  songs.py  sync.py  td.py  teks.py
docs/: ApiNyaEr.rst  Makefile  api.rst  conf.py  index.rst  make.bat  modules.rst  req.txt  requirements.txt  setup.rst  usage.rst
docs/source/: client.rst  conf.py  index.rst
docs/source/_static/css/: pyro.css
docs/source/_templates/: 404.html
docs/source/saavn/: index.rst
docs/source/saavn/apinya/: index.rst  methods.rst
