[project]
name = "ApiNyaEr"
version = "v2"
authors = [
    { name = "ErNewDev0" }
]
description = "An Api Compile from another source"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License"
]
license = { text = "GNU General Public License" }

dependencies = [
    "aiofiles",
    "pillow",
    "httpx",
    "beautifulsoup4",
]

[project.urls]
Issues = "https://github.com/ErRickow/ApiNyaEr/issues"
Source = "https://pypi.org/projects/ApiNyaEr "
Community = "https://t.me/Pamerdong"
Documentation = "https://ErNewDev0.github.io/"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"